--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./dist/index",
+    "start": "yarn build && node ./dist/index",
     "build": "webpack",
     "migrate": "node src/cli/postgrator.js"
   },
