--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "express": "^4.16.3",
+    "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
     "graphql-tools": "^3.0.2",
     "knex": "^0.14.6",
+    "lodash.merge": "^4.6.1",
     "mssql": "^4.1.0",
     "mysql": "^2.15.0",
     "pg": "^7.4.3",
     "postgrator": "^3.6.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
-    "webpack-node-externals": "^1.2.0",
-    "babel-preset-es2015": "^6.24.1"
+    "webpack-node-externals": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
