--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1"
   }
 }
